--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <p><strong>Text excerpts from: <a href="http://www.gutenberg.org" target="_blank">Project Gutenberg</a></strong></p>
 
   <ul>
-    <li><strong>Student`s Name</strong><li>
+    <li><strong>Student`s Name</strong></li>
     <li><strong>ITMD-361</strong></li>
     <li><strong>Lab 3</strong></li>
   </ul>
